# ChangeLog for dev-lang/go
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/go/ChangeLog,v 1.46 2014/08/28 11:20:50 mgorny Exp $

  28 Aug 2014; Michał Górny <mgorny@gentoo.org> go-1.3.1.ebuild:
  Remove USE=bash-completion, install the completion file unconditionally
  following the Council decision.

  15 Aug 2014; William Hubbs <williamh@gentoo.org> go-9999.ebuild:
  sync live ebuild

*go-1.3.1 (15 Aug 2014)

  15 Aug 2014; William Hubbs <williamh@gentoo.org> +go-1.3.1.ebuild:
  version bump for #519892.

  14 Aug 2014; William Hubbs <williamh@gentoo.org> -go-1.2.ebuild:
  remove old version

  14 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> go-1.3.ebuild:
  x86 stable wrt bug #517432

  04 Aug 2014; Fabian Groffen <grobian@gentoo.org> go-1.3.ebuild:
  Marked ~x86-macos

  29 Jul 2014; Markus Meier <maekke@gentoo.org> go-1.3.ebuild:
  arm stable, bug #517432

  18 Jul 2014; William Hubbs <williamh@gentoo.org> go-1.3.ebuild:
  stable on amd64 for bug #517432

  18 Jul 2014; William Hubbs <williamh@gentoo.org> go-9999.ebuild:
  install editors document to point people to the go wiki page about editor and
  shell support

  17 Jul 2014; William Hubbs <williamh@gentoo.org> go-9999.ebuild:
  remove editor and shell support use flags for bug #516070

  22 Jun 2014; William Hubbs <william@gentoo.org> -go-1.2.2.ebuild:
  remove old

*go-1.3 (19 Jun 2014)

  19 Jun 2014; Patrick Lauer <patrick@gentoo.org> +go-1.3.ebuild:
  Bump

*go-1.2.2 (05 Jun 2014)

  05 Jun 2014; Patrick Lauer <patrick@gentoo.org> +go-1.2.2.ebuild:
  Bump

  28 Mar 2014; Fabian Groffen <grobian@gentoo.org> go-1.2.ebuild,
  go-9999.ebuild:
  Fix for Prefix, marked ~x64-macos

  11 Feb 2014; William Hubbs <williamh@gentoo.org> go-1.2.ebuild,
  go-9999.ebuild:
  add ~amd64-fbsd for bug #494418

  11 Feb 2014; William Hubbs <williamh@gentoo.org>
  -files/go-1.1.1-no-Werror.patch, -files/go-1.1.2-no-Werror.patch,
  -go-1.1.2.ebuild: