@@ -3,28 +3,18 @@ Hash: SHA256
 
 AUX go-1.2-no-Werror.patch 230 SHA256 65d38b9485da2ff9417a2c44a81b6e52cc9bd2727b27e7add10d48a63805d4a3 SHA512 3cf139723e6ff0cbf7aaf76295fe4208f2062f2d4086e36d05cad83919217b5355e0e79b0b515a06a578389301bd07b062cb58b98fc0f9e4badf190cd1c34826 WHIRLPOOL 589b081bccf4afa015abe615c9d14b05ee2d2562b9473f8587456cfa8205a20483298f987d6bcf02630d17c2fbf3cc461e246ecc8e7602a89fc975ff3eefe172
 DIST go1.3.1.src.tar.gz 10047964 SHA256 fdfa148cc12f1e4ea45a5565261bf43d8a2e7d1fad4a16aed592d606223b93a8 SHA512 3d35c823e6f5264044c299a38ff425519dcf07bdc1b37a2362108be23ff1442f747ef8fe659df33b2588327a5ec8d9e85f4fd24929d8e23a8ede96a63d6f90ff WHIRLPOOL 71676b82e84b430330e7f19411162aa3841ee0b09d248b637b07d0435474e05953cbb579ba315eca3f78ee327c889f761dae3845d8b74d56623b04b74e35111c
+DIST go1.3.3.src.tar.gz 10049379 SHA256 1bb6fde89cfe8b9756a875af55d994cce0994861227b5dc0f268c143d91cd5ff SHA512 159872b7764986eba6641a5ebaf3aed3d6066bcd384672068354359099e52035b25bc819582d022ef8d7d91e244269cb38917e13c4d3eac8581831d41b2bac2b WHIRLPOOL 512db88e8503020fefc70acec7745b4fca0b8f4c4e20f95992633db3ac6a5db395d9e15d17b4fa8e385a6b88c8e03462a287e2750a5667596807b2131dfa137c
 DIST go1.3.src.tar.gz 10046547 SHA256 eb983e6c5b2b9838f482c5442b1ac1856f610f2b21f3c123b3fedb48ffc35382 SHA512 342ccad7790ea856315fc1bea1a745a4ceb444f66cd9d2eaa3486d68e431ee99e697f490fb5f33594d59d42d80eec02a04f6cb7726d8709a32115edf18ffe244 WHIRLPOOL e4cda25282ac1c007060f8d73222c81f373374c096f9b4db2c8f4c353f1e0d667c6a04131e2b482c18c14d09b299ba5c47f587021240d8404df75615c00f1845
 EBUILD go-1.3.1.ebuild 3380 SHA256 f21369e25255576a3743a63fc143ec2c0c7caa7ba9dfada1adbacbc9397bf7ec SHA512 6af70588030e663c317f84cefeba044ce3416fedefe6c9148b9a3e68947175bafb043367c38c87d8091700b8e6f2169d784961dcc910a96543e9b506f30ccc4b WHIRLPOOL ce31fe76fee836e513e16415c18231285a8bc61c625d457b239b90f37780c5e8b5e4e4d4584478a353de47e164c405388ea8848612cd4606f45bf56482cba27f
+EBUILD go-1.3.3.ebuild 3382 SHA256 264a4a07e5a9122d79ecca06b880c4fa844b088df6d0ad5bfa9e02834bf8a159 SHA512 b535a9c888a3b07313644b91ab590797a6bd94bd2a495ca9b390b44e089472b80ba90d34073f72186fa2651d07b8440bccb1043210edc94ce24183d310d8c3f8 WHIRLPOOL 5e536d38c155a76113d85e7504a9ee6464528144cb54e03ac2c606425bb5eab2d748a1080b07eddfeb2463a0e4d12b276b9d3318a15d7ec6aab7f128f5c4a5dc
 EBUILD go-1.3.ebuild 3479 SHA256 710e079ee0f7c74488ddfd827a458c0935c26ed5f4632e96d90e1a5c29bab062 SHA512 d0cae29b5630cfa9553b8b68aaa329eaafddbb19d9cec6e8f197722b5847930e23bcf30b808c28e7aaa4e89a4d3ece0d0d995bc06c0863afb4f2e974fef167d1 WHIRLPOOL 5e4976fdaea75b019e049e0750374f1a1958ea08f005134c7fd695ad6c6e2ce2d07fa07f0c08894e138ba160ee3884fb556b4e8a9ef1c159d5e53885af82fdc8
 EBUILD go-9999.ebuild 2626 SHA256 b34a68b75c4a6edc3a873cfec046838f5d8ae9dce21717478e8036b2448338f3 SHA512 d4d9af11c98ad8464ef608408a83b69c05d84a668063d8f64dbbb84173361b42a967e78c26ec5d781f08764be52ef176d856a1700f5682de6d3d60c3c4aaba38 WHIRLPOOL 158c8e221c802e2e2e420bd7969afabcecdf52c2e54cfcdffdaabdd54e3128613ad59e06e07af6042305570bb8f9c5b09077f56dc9f0cba782334aea9041b7b2
-MISC ChangeLog 6157 SHA256 59b3de96ec008ece069508de9233bb48b807e31df452426123b24948a38f347f SHA512 06adc4d2ac70d9b450cf432700fcd67466db074294e7aa7733be27205dc4b5cf960b0ea877219930dd1bf21149fb46f53703716a398587d4c671f5b6e7240c7b WHIRLPOOL 89eaee112adf01f8a53c1192ae2540789bb8959a2f11323b0670d7054ac58ec6ef6cfb66685d565cad14afe05e12ef41a23ec80736d122fdca6d770b10d8d6c7
+MISC ChangeLog 6269 SHA256 6494558a7d19c77781fe9177d8c102f7be252d908be819a42853abc8f9c15f55 SHA512 18b2e6a93559ae6a7ee6ec2f6f53caabb00d42f9a829d675c3c3ce8fdce0e4e0694143f0f41e74d280bf5c7ab2eadd475ccd10ae7799f4ee0e5cdfedbd75f1ce WHIRLPOOL 1919ae0689a7e9c0337e40c543d09a4672b8d401304e829c91738118d02b2352e00f8ee18dc7cb6e0c77f1b81ac43f6d72d22a2e0714086b71c8cb129cb72185
 MISC metadata.xml 448 SHA256 d53ad6b454d72353e0308a91a989a1a3345ae97c0199748dee1862576ad4476a SHA512 0c5fb551437353e87f87c91e576ef224b770f686700150c19e7f34e6903ba26910293bb74db9732a220006b873113662464646dd96e61503e4aa90cc84e14f75 WHIRLPOOL b3846a0fad8844ad7ec961b512cb12a9d588bfac28b2dc53798399ac8628ccbf6c06c5666b03eabef05b0acb0cea04d563252eaaa893341c5b3fe59475ffdab5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJT/xCTXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOeHsQAJB4wn4oF/6PzlKii64qpoji
-dPnWDYm7aUedmtV6aLB1vU9l/4IXTEoAV/DtxJAY5jrmFRbj4DqO4Tv76AzO8tRe
-lp+SKw4lze7t3lDir9+5bgj+rpZNAU6ojYXq4231lMw14jftOkpQxmwxHUau3q8M
-RAcl6xsDFE3ewCwcHX6HOEA3CUxGlQ7Q5WAtGFNA5z1R5N+fDO0fLBDKYCuXcPoW
-t0irKrFEY+ZM4jF0mSayUJOArKslT9rAw0xnuVEpEPrDrirK8Mx5+1tGMgRut4rT
-tG/5rL+JL0QGi3emE4MLP9yCLzZeHr90emI2SKOcvS3unP6nb+JtFO1mEorBTb7L
-lm7MES58YmgU0+9Iib5Dz/aSNKS8xSfI3Grv+GGFETNfxQ2tf6QvZ/u6t5j5HCNp
-59hcclOOGeLt0HKDDB9mj/FrsvYKF4RBqaKz106qMK59/ybyYNR09S49+yubfj/G
-xcXdmSoYmGoFfGZUNiank11HPxjS4slgjsN2jpFYsKVa5ARvs4rlQN5lzfEBy/E8
-LRJkPSOcCc5DmECLagmNjjRr8UPhjVgvlSyvKWu4tqRX1dKFb9supx96gtxvGHFH
-Zi5E9grMAqDz9eQ2iNwaFDU5wIFS2bpHfapDGsWprup4+Pk3LV8BQ0OfMHePYN8H
-29LuHda9BP9CzPiHyfq0
-=Mv5a
+iEYEAREIAAYFAlQz+fcACgkQblQW9DDEZTjj/gCeKsNRYqdQqFElkTVfu0GTW5Y0
+f9UAn1Vth1kY8l4HOrP9Zk+BEg38suFC
+=rkeV
 -----END PGP SIGNATURE-----
